# lucidpy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/lucidpy/: __init__.py  client.py  models.py
tests/: __init__.py  client_test.py  models_test.py
tests/assets/: example.json  lucid_response.json
